--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,24 +1,32 @@
 
-<h5 style="margin-bottom: 1rem;">Books added to cart</h5>
 
-<!-- <ul>
-  <li >
-    {{book.name}} - Amount: {{book.amount}}
-  </li>
+<ng-container *ngIf="listCartBook && listCartBook.length > 0">
+  <h5 style="margin-bottom: 1rem;">Books added to cart</h5>
 
-
-
-</ul> -->
-
-<div *ngFor="let book of listCartBook" style="padding-left: 1.5rem;" class="form-group row" >
-  <label [for]="book.id" class="col-form-label" style="margin-right: 1rem;">{{book.name}}</label>
-  <div>
-    <input (keypress)="onKeyPressNumber($event)" class="form-control" type="number" [value]="book.amount"
-        [id]="book.id" min="0" max="999" >
+  <div *ngFor="let book of listCartBook" style="padding-left: 1.5rem;" class="form-group row" >
+    <label [for]="book.id" class="col-form-label" style="margin-right: 1rem;">{{book.name}}</label>
+    <div>
+    </div>
+    <div (click)="onInputNumberChange('minus', book)">
+      <i class="fas fa-minus iconPlusMinus"></i>
+    </div>
+    <span style="margin-top: 5px; margin-left: 0.5rem; margin-right: 0.5rem;">{{book.amount}}</span>
+    <div (click)="onInputNumberChange('plus', book)">
+      <i class="fas fa-plus iconPlusMinus"></i>
+    </div>
+    <div style="margin-top: 5px; margin-left: 1rem;">
+      x {{book.price}}€ = {{book.amount * book.price}} €
+    </div>
   </div>
-  <div style="margin-top: 5px; margin-left: 1rem;">
-    {{book.amount}} * {{book.price}} = {{book.amount * book.price}} €
-  </div>
-</div>
 
-<hr>
+  <hr>
+
+  <h5 style="margin-bottom: 1rem;">Total price {{totalPrice}}€</h5>
+
+  <button type="button" class="btn btn-primary">Buy now</button>
+
+</ng-container>
+
+<ng-container *ngIf="!listCartBook || listCartBook.length === 0">
+  <h5>The cart is empty</h5>
+</ng-container>
