--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -4,9 +4,8 @@
   <h5 style="margin-bottom: 1rem;">Books added to cart</h5>
 
   <div *ngFor="let book of listCartBook" style="padding-left: 1.5rem;" class="form-group row" >
-    <label [for]="book.id" class="col-form-label" style="margin-right: 1rem;">{{book.name}}</label>
-    <div>
-    </div>
+    <label [for]="book.id" class="col-form-label col-4" style="margin-right: 1rem;">{{book.name}}</label>
+
     <div (click)="onInputNumberChange('minus', book)">
       <i class="fas fa-minus iconPlusMinus"></i>
     </div>
