--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -22,7 +22,8 @@
 
   <h5 style="margin-bottom: 1rem;">Total price {{totalPrice}}€</h5>
 
-  <button type="button" class="btn btn-primary">Buy now</button>
+  <button type="button" class="btn btn-primary" style="margin-right: 10px;">Buy now</button>
+  <button (click)="onClearBooks()" type="button" class="btn btn-danger">Delete cart</button>
 
 </ng-container>
 
